--- a/src/scss/_Projects.scss
+++ b/src/scss/_Projects.scss
@@ -51,6 +51,7 @@
         & img {
           display: block;
           width: 100%;
+          max-width: 345px;
         }
 
         .project-date {
